<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  agv_interfaces - AGV路径规划系统的自定义消息/服务/动作接口包

  技术要点：
  - ROS2中，不同节点之间通过"消息(Message)"传递数据
  - "服务(Service)"用于请求-响应模式（类似函数调用）
  - "动作(Action)"用于长时间运行的任务，支持反馈和取消
  - 把所有接口放在一个独立包中，是为了让其他包都能依赖它，避免循环依赖
-->
<package format="3">
  <name>agv_interfaces</name>
  <version>0.1.0</version>
  <description>AGV路径规划系统的自定义ROS2接口定义（消息、服务、动作）</description>
  <maintainer email="user@example.com">AGV Developer</maintainer>
  <license>MIT</license>

  <!-- 构建工具：rosidl_default_generators 会根据 .msg/.srv/.action 文件
       自动生成C++和Python的可使用代码 -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 运行时依赖：rosidl_default_runtime 提供生成的接口代码的运行支持 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 依赖标准消息类型，比如 std_msgs 中的 Header、string 等 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>

  <!-- 声明本包中的接口文件，rosidl会自动发现并生成代码 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
