<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  agv_local_planner - AGV局部避障规划器

  功能：基于DWA（动态窗口法）实现实时局部避障
  技术要点：
  - 局部规划器负责在全局路径引导下实时避障
  - DWA在速度空间采样，前向模拟轨迹，选择最优速度
  - 输出geometry_msgs/Twist速度指令，驱动AGV运动
-->
<package format="3">
  <name>agv_local_planner</name>
  <version>0.1.0</version>
  <description>AGV局部避障规划器：DWA算法实现，实时避障并输出速度指令</description>
  <maintainer email="user@example.com">AGV Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>visualization_msgs</depend>
  <depend>agv_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
