<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  agv_map - AGV地图管理包

  功能：加载地图文件、发布OccupancyGrid、提供地图查询服务
  技术要点：
  - 地图是路径规划的基础，没有地图规划器无从工作
  - OccupancyGrid是ROS2标准栅格地图格式，每个格子存储代价值
  - 地图服务器通常在系统启动时加载一次，之后持续发布
-->
<package format="3">
  <name>agv_map</name>
  <version>0.1.0</version>
  <description>AGV地图管理：加载地图文件、发布栅格地图、提供地图查询服务</description>
  <maintainer email="user@example.com">AGV Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心依赖 -->
  <depend>rclcpp</depend>              <!-- ROS2 C++客户端库，提供节点、话题、服务等API -->
  <depend>nav_msgs</depend>            <!-- 包含OccupancyGrid等导航相关消息 -->
  <depend>geometry_msgs</depend>       <!-- 几何消息：Point, Pose等 -->
  <depend>std_msgs</depend>            <!-- 标准消息：Header, String等 -->
  <depend>tf2</depend>                 <!-- 坐标变换库 -->
  <depend>tf2_ros</depend>             <!-- 坐标变换ROS2封装 -->
  <depend>yaml-cpp</depend>            <!-- YAML配置文件解析库 -->
  <depend>agv_interfaces</depend>      <!-- 我们自定义的接口 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
