<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_web_monitor</name>
  <version>0.1.0</version>
  <description>AGV Web监控面板：实时显示车队状态、位置和任务</description>
  <maintainer email="user@example.com">AGV Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>agv_interfaces</depend>

  <exec_depend>python3-websockets</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
